# search-rs

./: docker-compose.yml
backend/: .env  .gitignore  Cargo.toml
backend/.sqlx/: query-135bf3e454eec32c92da28dfa192c63e60682b897062ec784d433d183471a609.json  query-138c144a3a0f1ca866e350543db41bb245862bf0a19992ba24594f421ad67d66.json  query-58ba75fb63e90ec6ee9d613ca2fddb6aeca63a879829c149889a9726b726119c.json  query-6fc76fda13a0a50078fcc08d34765717f637aa606aeb79671753e811f8e668b0.json  query-7079238570dad7e1569bd4e2f361b79a8438d83334b4df4a4d2795b1a27aa256.json  query-a6ccee4e8c4644e11ce50748a6818f2e3e17cfea5791acc235f4925b8611f4ad.json  query-ed70f62c7faf77f27af3248878dba8ea7ba52b2422773a706ecbed413552d0e7.json  query-f9f2a2cac748dc006e0750267c1f327eeb6d11cfe97fab9cab1e5b76a5abfc88.json
backend/datasets/: top_thousand_domains.csv
backend/migrations/: 20230830190255_initial.down.sql  20230830190255_initial.up.sql
backend/src/: config.rs  main.rs
backend/src/db/: domain_link_repository.rs  domain_repository.rs  indexed_website_repository.rs  mod.rs  website_link_repository.rs  website_page_repository.rs  website_to_index_repository.rs
backend/src/models/: domain.rs  domain_link.rs  indexed_website.rs  mod.rs  website_link.rs  website_page.rs  website_to_index.rs
backend/src/services/: mod.rs  website_crawl_service.rs
backend/src/util/: search_error.rs
