[package]
name = "search-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-async-std-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
thiserror = "1.0"
uuid = { version = "1.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
spider = "1.37"
csv = "1.2"
